start changing art

--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,14 @@
 /* 
     Document   : main.css
     Created on : March 12, 2014
+    Modified on: March 15, 2014
     Author     : Vincent Palcon
-    Description: Flying Panda
+    Adapter    : Andrew Kirpalani
+    Orignal Description: Flying Panda
+    Description: Rolly Dice
     Version: 1.0
 */
+
 
 root { 
     display: block;
